# zuplae-python-starter

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci-cd.yml
app/: app.py  main.py
app/api/v1/: router.py
app/api/v1/health/: controller.py  schema.py
app/core/: config.py  deps.py  logging.py
app/domains/health/: repository.py  use_case.py
devtools/: git-commit.sh
devtools/envs/: .env.example  .env.test
tests/: conftest.py
tests/api/v1/health/: test_controller.py  test_schema.py
tests/core/: test_config.py  test_deps.py  test_logging.py
tests/domains/health/: test_repository.py  test_use_case.py
