[tool.poetry]
name = "zuplae-python-starter"
version = "0.0.1"
description = "zuplae-python-starter com uma base moderna, rápida e padronizada — focada em FastAPI + Poetry, lint/format, testes, Docker e CI."
authors = ["Maykon Granemann <maykondgranemann@gmail.com>"]
readme = "README.md"
package-mode = false
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = { extras = ["standard"], version = ">=0.116.1,<0.117.0" }
python-dotenv = ">=1.1.1,<2.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
pytest = ">=8.4.1,<9.0.0"
pytest-asyncio = ">=1.1.0,<2.0.0"
pytest-mock = ">=3.14.1,<4.0.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.10.3"
black = "^25.1.0"
ruff = "^0.12.9"
mypy = "^1.17.1"
pre-commit = "^4.3.0"
pydantic = { extras = ["mypy"], version = "^2.11.7" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
